--- a/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_movie_details_on_watch_party_create_page.yml
+++ b/spec/fixtures/vcr_cassettes/Create_watch_party/As_a_visitor_when_I_visit_movie_show_page/can_display_movie_details_on_watch_party_create_page.yml
@@ -892,4 +892,144 @@ http_interactions:
         States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
         beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.549,"vote_count":338}'
   recorded_at: Sat, 08 Jul 2023 19:49:29 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/455476
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Authorization:
+      - Hide_API
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 08 Jul 2023 17:44:30 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=26361
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 50e253f7e3769df8918cea1862b1c972
+      X-Memc-Age:
+      - '5359'
+      X-Memc-Expires:
+      - '21072'
+      Etag:
+      - W/"edf4dcfed767f4efb3b04d5811cda90a"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 de2ed3c94563fee614f35f9bc3f52d1c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - IAD89-C3
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - EN8B6VqUXanyXxv4q9wHDdUnAsls4zN_Cd6vM2NvRIQAHPrL6bG6qg==
+      Age:
+      - '11990'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
+        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
+        of his abducted sister unwittingly taps into hidden powers, he discovers he
+        might be the only person alive who can protect a reincarnated goddess, sent
+        to watch over humanity. Can he let his past go and embrace his destiny to
+        become a Knight of the Zodiac?","popularity":3154.453,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
+        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
+        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
+        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
+        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.549,"vote_count":338}'
+  recorded_at: Sat, 08 Jul 2023 21:04:20 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/455476
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Authorization:
+      - Hide_API
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 08 Jul 2023 17:44:30 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=26361
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 50e253f7e3769df8918cea1862b1c972
+      X-Memc-Age:
+      - '5359'
+      X-Memc-Expires:
+      - '21072'
+      Etag:
+      - W/"edf4dcfed767f4efb3b04d5811cda90a"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 db72f6ab1d9d27534c6158ca17e3af1c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - IAD89-C3
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - VW4oY41YhRvbHLOlf5tWEcdQwILdl-w2jEdInV0bywt-9W52ZoDZEw==
+      Age:
+      - '11990'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/oqP1qEZccq5AD9TVTIaO6IGUj7o.jpg","belongs_to_collection":null,"budget":60000000,"genres":[{"id":14,"name":"Fantasy"},{"id":28,"name":"Action"},{"id":12,"name":"Adventure"}],"homepage":"https://kotzmovie.com","id":455476,"imdb_id":"tt6528290","original_language":"en","original_title":"Knights
+        of the Zodiac","overview":"When a headstrong street orphan, Seiya, in search
+        of his abducted sister unwittingly taps into hidden powers, he discovers he
+        might be the only person alive who can protect a reincarnated goddess, sent
+        to watch over humanity. Can he let his past go and embrace his destiny to
+        become a Knight of the Zodiac?","popularity":3154.453,"poster_path":"/qW4crfED8mpNDadSmMdi7ZDzhXF.jpg","production_companies":[{"id":11341,"logo_path":"/xytTBODEy3p20ksHL4Ftxr483Iv.png","name":"Stage
+        6 Films","origin_country":"US"},{"id":5542,"logo_path":"/ayE4LIqoAWotavo7xdvYngwqGML.png","name":"Toei
+        Animation","origin_country":"JP"}],"production_countries":[{"iso_3166_1":"JP","name":"Japan"},{"iso_3166_1":"US","name":"United
+        States of America"}],"release_date":"2023-04-27","revenue":6794519,"runtime":112,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Go
+        beyond your destiny.","title":"Knights of the Zodiac","video":false,"vote_average":6.549,"vote_count":338}'
+  recorded_at: Sat, 08 Jul 2023 21:04:20 GMT
 recorded_with: VCR 6.2.0
