--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ spec/spec_helper.rb
 config/application.yml
 # Ignore application configuration
 /config/application.yml
+
+# Ignore VCR Cassettes
+vcr_cassettes/
+
